--- a/style.css
+++ b/style.css
@@ -95,7 +95,7 @@ nav {
     }
 }
 
-@media screen and (max-width:830px){
+@media screen and (max-width:736px){
     body {
         overflow-x: hidden;
     }
@@ -136,14 +136,51 @@ nav {
     }
 }
 
-.toggle .line1{
+.toggle .line1 {
     transform: rotate(-45deg) translate(-5px,5px);
 }
-.toggle .line2{
+.toggle .line2 {
     opacity: 0;
 }
-.toggle .line3{
+.toggle .line3 {
     transform: rotate(45deg) translate(-5px,-5px);
+}
+
+.grid {
+    margin-top: 50px;
+    display: grid;
+    grid-template-columns: 5% 30% 30% 30% 5%;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+}
+
+.retriever_gallery {
+    grid-column: 2 / 3;
+}
+
+.sports_gallery {
+    grid-column: 3 / 4;
+}
+
+.hotel_fullerton_gallery {
+    grid-column: 4 / 5;
+}
+
+.USDA_gallery {
+    grid-column: 2 / 3;
+}
+
+.mom_gallery {
+    grid-column: 3 / 4;
+}
+
+.hearts_bones_gallery {
+    grid-column: 4 / 5;
+}
+
+.footer {
+    grid-column: 2 / 5;
+    grid-row: 4;
 }
 
 .preloader {
@@ -155,9 +192,102 @@ nav {
     left: 0;
     position: fixed;
     top: 0;
-    transition: opacity 1.7s linear;
+    transition: opacity 1.9s linear;
     transition: opacity .7s linear;
     width: 100%;
     z-index: 9999;
     pointer-events: none;
+}
+
+@media screen and (max-width:1024px) {
+    .nav-container {
+        width: 33%;
+    }
+}
+
+@media screen and (max-width:850px){
+    body {
+        overflow-x: hidden;
+    }
+    .nav-container {
+        position: absolute;
+        right: 0px;
+        height: 18vh;
+        top: 8vh;
+        background-color: var(--background);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 25%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .nav-container li {
+        opacity: 0;
+    }
+    .burger {
+        display: block;
+        cursor: pointer;
+    }
+    .grid {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: 5% 45% 45% 5%;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+        grid-gap: 10px;
+    }
+    .retriever_gallery {
+        grid-column: 2 / 3;
+    }
+    .sports_gallery {
+        grid-column: 3 / 4;
+    }
+    .hotel_fullerton_gallery {
+        grid-column: 2 / 3;
+    }
+    .USDA_gallery {
+        grid-column: 3 / 4;
+    }
+    .mom_gallery {
+        grid-column: 2 / 3;
+    }
+    .hearts_bones_gallery {
+        grid-column: 3 / 4;
+    }
+    .footer {
+        grid-column: 2 / 4;
+        grid-row: 5;
+    }
+}
+
+@media screen and (max-width:600px){
+    .grid {
+        margin-top: 50px;
+        display: grid;
+        grid-template-columns: 10% 80% 10%;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        grid-gap: 10px;
+    }
+    .retriever_gallery {
+        grid-column: 2;
+    }
+    .sports_gallery {
+        grid-column: 2;
+    }
+    .hotel_fullerton_gallery {
+        grid-column: 2;
+    }
+    .USDA_gallery {
+        grid-column: 2;
+    }
+    .mom_gallery {
+        grid-column: 2;
+    }
+    .hearts_bones_gallery {
+        grid-column: 2;
+    }
+    .footer {
+        grid-column: 2;
+        grid-row: 8;
+    }
 }
