--- a/css/about.css
+++ b/css/about.css
@@ -15,7 +15,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    font-family: "Roboto Mono", sans-serif;
+    font-family: "Work Sans", sans-serif;
     background-color: var(--background);
     margin-top: 8px;
 }
@@ -49,8 +49,9 @@ nav {
 
 .nav-links {
     position: relative;
-    padding-left: 4px;
+    padding-left: 3px;
     padding-right: 0px;
+    padding-bottom: 1px;
     margin-top: 10px;
 }
 
@@ -89,14 +90,14 @@ nav {
     margin: 5px;
     transition: all 0.3s ease;
 }
-
-@media screen and (max-width:1024px) {
+@media screen and (max-width:1050px) {
     .nav-container {
         width: 33%;
     }
+
 }
 
-@media screen and (max-width:830px){
+@media screen and (max-width:900px){
     body {
         overflow-x: hidden;
     }
@@ -109,7 +110,7 @@ nav {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 25%;
+        width: 33%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
@@ -119,6 +120,44 @@ nav {
     .burger {
         display: block;
         cursor: pointer;
+    }
+}
+
+@media screen and (max-width:700px){
+    .grid {
+        margin-top: 10px;
+        display: grid;
+        grid-template-columns: auto 60% auto;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 5%;
+        grid-gap: 10px;
+    }
+    .retriever_gallery {
+        grid-column: 2;
+        width: 90%
+    }
+    .sports_gallery {
+        grid-column: 2;
+        width: 90%
+    }
+    .hotel_fullerton_gallery {
+        grid-column: 2;
+        width: 90%
+    }
+    .USDA_gallery {
+        grid-column: 2;
+        width: 90%
+    }
+    .mom_gallery {
+        grid-column: 2;
+        width: 90%
+    }
+    .hearts_bones_gallery {
+        grid-column: 2;
+        width: 90%
+    }
+    .footer {
+        grid-column: 2;
+        grid-row: 7;
     }
 }
 
@@ -147,18 +186,3 @@ nav {
     transform: rotate(45deg) translate(-5px,-5px);
 }
 
-.preloader {
-    align-items: center;
-    background: black;
-    display: flex;
-    height: 100vh;
-    justify-content: center;
-    left: 0;
-    position: fixed;
-    top: 0;
-    transition: opacity 1.7s linear;
-    transition: opacity .7s linear;
-    width: 100%;
-    z-index: 9999;
-    pointer-events: none;
-}
