--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ nav {
     justify-content: space-around;
     align-items: center;
     min-height: 8vh;
-    font-family: "Roboto Mono", sans-serif;
+    font-family: "Work Sans", sans-serif;
     background-color: var(--background);
     margin-top: 8px;
 }
@@ -33,6 +33,8 @@ nav {
     justify-content: space-around;
     width: 28%;
     text-decoration: none;
+    opacity: 0.9;
+    padding-bottom: 12px;
 }
 
 .nav-container li {
@@ -49,8 +51,9 @@ nav {
 
 .nav-links {
     position: relative;
-    padding-left: 4px;
+    padding-left: 3px;
     padding-right: 0px;
+    padding-bottom: 1px;
     margin-top: 10px;
 }
 
@@ -91,8 +94,6 @@ nav {
 
 .gallery_img {
     width: 100%;
-    padding-top: 8px;
-    padding-bottom: 30px;
 }
 
 .grid {
@@ -132,15 +133,24 @@ nav {
     grid-row: 3;
 }
 
+.footer {
+    font-family: "Work Sans", sans-serif;
+    color: black;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 14px;
+    padding: 1px;
+}
+
 .gallery_img:hover, .retriever_gallery:hover, .sports_gallery:hover,.hotel_fullerton_gallery:hover, .USDA_gallery:hover, .mom_gallery:hover, .hearts_bones_gallery:hover{
     transform: translateY(-10px);
     transition: all 0.3s ease-in;
-    opacity: 0.7;
+    opacity: 0.8;
 }
 
 @media screen and (max-width:1050px) {
     .nav-container {
-        width: 30%;
+        width: 33%;
     }
     .grid {
         margin-top: 50px;
@@ -192,7 +202,7 @@ nav {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 25%;
+        width: 33%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
@@ -238,7 +248,7 @@ nav {
         width: 90%
     }
     .footer {
-        grid-column: 2;
+        grid-column: 2 / 3;
         grid-row: 7;
     }
 }
