--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@
     --black: #000000;
 }
 
+
+/*--------HEADER--------*/
+
 nav {
     display: flex;
     justify-content: space-around;
@@ -34,7 +37,7 @@ nav {
     width: 28%;
     text-decoration: none;
     opacity: 0.9;
-    padding-bottom: 12px;
+    margin-bottom: 12px;
 }
 
 .nav-container li {
@@ -56,6 +59,8 @@ nav {
     padding-bottom: 1px;
     margin-top: 10px;
 }
+
+/*--------HEADER (HOVER EFFECTS)--------*/
 
 .nav-links::after {
     content: "";
@@ -92,42 +97,111 @@ nav {
     transition: all 0.3s ease;
 }
 
+
+
+/*--------GRID LAYOUT--------*/
+
 .gallery_img {
     width: 100%;
+    border-radius: 3px; 
 }
 
 .grid {
-    margin-top: 90px;
+    margin-top: 60px;
     display: grid;
-    grid-template-columns: auto 25% 25% 25% auto;
+    grid-template-columns: auto 28% 28% 28% auto;
     grid-template-rows: 1fr 1fr 5%;
-    grid-gap: 2vw;
+    grid-gap: 30px;
 
 }
+
+/*--------RETRIEVER GRID--------*/
+
 .retriever_gallery {
     grid-column: 2 / 3;
-    width: 90%;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+    display: inline-block;
+    position: relative;
+    background: rgba(224,224,224,.6);
 }
+.retriever_overlay {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    color: black;
+    font-family: "Work sans", sans-serif;
+    display: inline-block;
+    flex-direction: column;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    opacity: 0;
+}
+.retriever_title {
+    font-size: 1.8em;
+    font-weight: bold;
+    margin-top: 3.6em;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.retriever_description {
+    font-size: 0.9em;
+    margin-top: 0.8em;
+    margin-left: 30px;
+    margin-right: 30px;
+}   
+.view_project {
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 1.2em;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.retriever_overlay:hover {
+    opacity: .85;
+    transition: opacity 0.3s ease-in;
+}
+
+/*--------SPORTS GRID--------*/
+
 .sports_gallery {
     grid-column: 3 / 4;
-    width: 90%;
+    width: 100%;
 }
+
+/*--------HOTEL FULLERTON GRID--------*/
+
 .hotel_fullerton_gallery {
     grid-column: 4 / 5;
-    width: 90%;
+    width: 100%;
 }
+
+/*--------USDA GRID--------*/
+
 .USDA_gallery {
     grid-column: 2 / 3;
-    width:90%
+    width:100%
 }
+
+/*--------M.O.M. GRID--------*/
+
 .mom_gallery {
     grid-column: 3 / 4;
-    width: 90%;
+    width: 100%;
 }
+
+/*--------HEARTS/BONES GRID--------*/
+
 .hearts_bones_gallery {
     grid-column: 4 / 5;
-    width: 90%;
+    width: 100%;
 }
+
+/*--------FOOTER GRID--------*/
+
 .footer {
     grid-column: 2 / 5;
     grid-row: 3;
@@ -142,11 +216,25 @@ nav {
     padding: 1px;
 }
 
+/*--------GRID HOVER EFFECTS--------*/
+
 .gallery_img:hover, .retriever_gallery:hover, .sports_gallery:hover,.hotel_fullerton_gallery:hover, .USDA_gallery:hover, .mom_gallery:hover, .hearts_bones_gallery:hover{
     transform: translateY(-10px);
-    transition: all 0.3s ease-in;
-    opacity: 0.8;
+    transition: transform 0.2s ease-in;
+    z-index: -100px;
 }
+
+.gallery_img:hover {
+    transform: translateY(-10px);
+    transition: transform 0.2s ease-in;
+    z-index: -100px;
+    transition: all 0.2s ease-in;
+}
+
+
+
+
+/*--------RESPONSIVE LAYOUT--------*/
 
 @media screen and (max-width:1050px) {
     .nav-container {
@@ -155,33 +243,33 @@ nav {
     .grid {
         margin-top: 50px;
         display: grid;
-        grid-template-columns: auto 38% 38% auto;
+        grid-template-columns: auto 39% 39% auto;
         grid-template-rows: 1fr 1fr 1fr 5%;
-        grid-gap: 2vw;
+        grid-gap: 30px;
     }
     .retriever_gallery {
         grid-column: 2 / 3;
-        width: 90%;
+        width: 100%;
     }
     .sports_gallery {
         grid-column: 3 / 4;
-        width: 90%;
+        width: 100%;
     }
     .hotel_fullerton_gallery {
         grid-column: 2 / 3;
-        width: 90%;
+        width: 100%;
     }
     .USDA_gallery {
         grid-column: 3 / 4;
-        width: 90%;
+        width: 100%;
     }
     .mom_gallery {
         grid-column: 2 / 3;
-        width: 90%;
+        width: 100%;
     }
     .hearts_bones_gallery {
         grid-column: 3 / 4;
-        width: 90%;
+        width: 100%;
     }
     .footer {
         grid-column: 2 / 4;
@@ -208,6 +296,7 @@ nav {
     }
     .nav-container li {
         opacity: 0;
+        z-index: 9999px;
     }
     .burger {
         display: block;
@@ -215,13 +304,13 @@ nav {
     }
 }
 
-@media screen and (max-width:700px){
+@media screen and (max-width:640px){
     .grid {
-        margin-top: 10px;
+        margin-top: 50px;
         display: grid;
-        grid-template-columns: auto 60% auto;
+        grid-template-columns: auto 70% auto;
         grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 5%;
-        grid-gap: 10px;
+        z-index: -1px;
     }
     .retriever_gallery {
         grid-column: 2;
@@ -253,6 +342,10 @@ nav {
     }
 }
 
+
+
+/*--------MENU ANIMATION--------*/
+
 .nav-active {
     transform: translateX(0%);
 }
@@ -278,6 +371,10 @@ nav {
     transform: rotate(45deg) translate(-5px,-5px);
 }
 
+
+
+/*--------PRELOADER--------*/
+
 .preloader {
     align-items: center;
     background: black;
@@ -288,7 +385,7 @@ nav {
     position: fixed;
     top: 0;
     transition: opacity 1s linear;
-    transition: opacity 1.2s linear;
+    transition: opacity 1s linear;
     width: 100%;
     z-index: 9999;
     pointer-events: none;
