--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
 
 :root {
     --background: #E0E0E0;
-    --black: #000000;
+    --slate: #2b2b2b;
+    --retriever: #e9635c;
+    --usda: #e75f0a;
 }
 
 
@@ -25,7 +27,7 @@ nav {
 }
 
 .logo {
-    color: black;
+    color:var(--slate);
     text-transform: uppercase;
     letter-spacing: 2px;
     font-size: 16px;
@@ -47,7 +49,7 @@ nav {
 }
 
 .nav-container a {
-    color: black;
+    color: var(--slate);
     text-decoration: none;
     letter-spacing: 2px;
     text-transform: uppercase;
@@ -71,7 +73,7 @@ nav {
     bottom: 0;
     width: 100%;
     height: 1px;
-    background: black;
+    background:var(--slate);
 
     transform: scaleX(0);
     transform-origin: right;
@@ -87,6 +89,8 @@ nav {
     font-weight: bold;
 }
 
+/*--------BURGER 1024-----*/
+
 .burger {
     display: none;
 }
@@ -94,7 +98,7 @@ nav {
 .burger div {
     width: 26px;
     height: 2px;
-    background-color: var(--black);
+    background-color: var(--slate);
     margin: 5px;
     transition: all 0.3s ease;
 }
@@ -105,16 +109,15 @@ nav {
 
 .gallery_img {
     width: 100%;
-    border-radius: 3px; 
+    border-radius: 1px; 
 }
 
 .grid {
     margin-top: 60px;
     display: grid;
-    grid-template-columns: auto 28% 28% 28% auto;
+    grid-template-columns: auto 25% 25% 25% auto;
     grid-template-rows: 1fr 1fr 5%;
     grid-gap: 30px;
-
 }
 
 /*--------RETRIEVER GRID--------*/
@@ -134,7 +137,7 @@ nav {
     left: 0px;
     bottom: 0px;
     right: 0px;
-    color: black;
+    color: var(--slate);
     font-family: "Work sans", sans-serif;
     display: inline-block;
     flex-direction: column;
@@ -163,8 +166,26 @@ nav {
     margin-right: 30px;
 }
 .retriever_overlay:hover {
-    opacity: .85;
+    opacity: .88;
     transition: opacity 0.3s ease-in;
+}
+.retriever_overlay::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 4px;
+    background: var(--retriever);
+    opacity: 0.7;
+
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.6s ease-in;
+}
+.retriever_overlay:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
 }
 
 /*--------SPORTS GRID--------*/
@@ -185,7 +206,67 @@ nav {
 
 .USDA_gallery {
     grid-column: 2 / 3;
-    width:100%
+    width:100%;
+    align-items: center;
+    justify-content: center;
+    display: inline-block;
+    position: relative;
+    background: rgba(224,224,224,.6);
+}
+.usda_overlay {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    right: 0px;
+    color: var(--slate);
+    font-family: "Work sans", sans-serif;
+    display: inline-block;
+    flex-direction: column;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    opacity: 0;
+}
+.usda_title {
+    font-size: 1.8em;
+    font-weight: bold;
+    margin-top: 3.6em;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.usda_description {
+    font-size: 0.9em;
+    margin-top: 0.8em;
+    margin-left: 30px;
+    margin-right: 30px;
+}   
+.usda_view_project {
+    font-size: 1em;
+    font-weight: bold;
+    margin-top: 1.2em;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.usda_overlay:hover {
+    opacity: .88;
+    transition: opacity 0.3s ease-in;
+}
+.usda_overlay::after {
+    content: "";
+    position: absolute;
+    bottom:0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background: var(--usda);
+    opacity: 0.7;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform 0.6s ease-in;
+}
+.usda_overlay:hover::after {
+    transform: scaleX(1);
+    transform-origin: left;
 }
 
 /*--------M.O.M. GRID--------*/
@@ -361,6 +442,8 @@ nav {
     }
 }
 
+
+
 .toggle .line1{
     transform: rotate(-45deg) translate(-5px,5px);
 }
@@ -377,7 +460,7 @@ nav {
 
 .preloader {
     align-items: center;
-    background: black;
+    background:var(--slate);
     display: flex;
     height: 100vh;
     justify-content: center;
@@ -385,7 +468,7 @@ nav {
     position: fixed;
     top: 0;
     transition: opacity 1s linear;
-    transition: opacity 1s linear;
+    transition: opacity 1.4s linear;
     width: 100%;
     z-index: 9999;
     pointer-events: none;
