--- a/css/contact.css
+++ b/css/contact.css
@@ -33,6 +33,9 @@ nav {
     justify-content: space-around;
     width: 30%;
     text-decoration: none;
+    opacity: 0.9;
+    margin-bottom: 12px;
+    z-index: 999;
 }
 
 .nav-container li {
@@ -91,13 +94,14 @@ nav {
     transition: all 0.3s ease;
 }
 
-@media screen and (max-width:1024px) {
+@media screen and (max-width:1200px) {
     .nav-container {
-        width: 33%;
+        width: 40%;
     }
+
 }
 
-@media screen and (max-width:830px){
+@media screen and (max-width:900px){
     body {
         overflow-x: hidden;
     }
@@ -110,7 +114,7 @@ nav {
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 25%;
+        width: 40%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
     }
